# robot_editor

./: .gitignore  CMakeLists.txt  LICENSE.txt  package.xml
src/: LICENSE  main.cpp  robot_editor.cpp  robot_editor.h  robot_preview.cpp  robot_preview.h
test_urdf/: r2d2_urdf.xml
ui/: main_window.ui
