<?xml version="1.0"?>
<package>
  <name>robot_editor</name>
  <version>0.0.0</version>
  <description>Tool for live-editing URDF Files</description>

  <maintainer email="digidevin@gmail.com">Devin Schwab</maintainer>
  <license>TODO</license>

  <author email="digidevin@gmail.com">Devin Schwab</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>

  <export></export>
</package>
